syntax = "proto3";
package sgenetwork.sge.subaccount;

option go_package = "github.com/sge-network/sge/x/subaccount/types";

import "gogoproto/gogo.proto";
import "cosmos_proto/cosmos.proto";
import "google/api/annotations.proto";
import "sgenetwork/sge/subaccount/balance.proto";
import "sgenetwork/sge/subaccount/params.proto";

// Query defines the gRPC querier service.
service Query {
  // Subaccount fetches a subaccount given the owner.
  rpc Subaccount(QuerySubaccountRequest) returns (QuerySubaccountResponse) {
    option (google.api.http).get = "/sge/subaccount/subaccount/{address}";
  };
  // Params returns the subaccount module parameters.
  rpc Params(QueryParamsRequest) returns (QueryParamsResponse) {
    option (google.api.http).get = "/sge/subaccount/params";
  };
}

// QueryParamsRequest is the request type for the Query/Params RPC method
message QueryParamsRequest {}
// QueryParamsResponse is the response type for the Query/Params RPC method
message QueryParamsResponse {
  sge.subaccount.Params params = 1 [ (gogoproto.nullable) = false ];
}

// QuerySubaccountRequest is the request type for the Query/Subaccount RPC
message QuerySubaccountRequest { string address = 1; }

// QuerySubaccountResponse is the response type for the Query/Subaccount RPC
message QuerySubaccountResponse {
  string address = 1 [ (cosmos_proto.scalar) = "cosmos.AddressString" ];
  sge.subaccount.AccountSummary balance = 2 [ (gogoproto.nullable) = false ];
  repeated sge.subaccount.LockedBalance locked_balance = 3
      [ (gogoproto.nullable) = false ];
  repeated sge.subaccount.LockedBalance unlocked_balance = 4
      [ (gogoproto.nullable) = false ];
  string withdrawable_unlocked_balance = 5 [
    (gogoproto.customtype) = "cosmossdk.io/math.Int",
    (gogoproto.nullable) = false
  ];
}
